--- a/style/style.css
+++ b/style/style.css
@@ -43,23 +43,123 @@
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
+	color: #000;
 }
-body {
+a, li {
+	text-decoration: none;
 
 }
-.main img{
-	width: 100%;
-	height: 400px;
-	/* background-image: url(../images/%E2%80%94Pngtree%E2%80%94mobile%20mobile%20it%20flat%20wind_4632327.png); */
-	/* background-color: royalblue; */
+body {
+	font-family: 'Source Sans Pro', sans-serif;
 }
 .container {
+	max-width: 1440px;
+	padding: 0 25px;
+	margin: 0 auto;
+}
+.main{
+	width: 100%;
+	height: 800px;
+	background-image: url(../images/mobile.png);
+	background-size: 900px;
+	background-position: right center;
+	background-attachment: local;
+	background-repeat: no-repeat;
+	background-position-x: 610px;
+	/* position: relative; */
+	/* top: 0px; */
+	/* right: -150px; */
 }
 .main__content {
+	height: 800px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: center;
 }
 .main__title {
+	/* font-family: 'Yanone Kaffeesatz', sans-serif; */
+	font-family: 'Lato', sans-serif;
+	font-size: 78px;
+	/* letter-spacing: 15px; */
+	text-shadow: -3px 6px 9px rgba(0, 0, 0, 0.2);
 }
 .main__text {
+	font-size: 20px;
+	margin: 10px 0 60px;
 }
 .main__btn {
+	display: flex;
+	justify-content: center;
+	min-width: 250px;
+	background-color: #1e90ff;
+	padding: 15px 30px;
+	font-size: 25px;
+	color: #fff;
+	border-radius: 7px;
+}
+.main__btn:hover {
+	background-color: #1e9fff;
+}
+.direction {
+	/* display: flex;
+	align-items: center;
+	justify-content: start; */
+	width: 100%;
+	height: 800px;
+	background-image: url(../images/process.png);
+	background-size: 900px;
+	background-position: right center;
+	background-attachment: local;
+	background-repeat: no-repeat;
+	background-position-x: 610px;
+	background-position-y: -150px;
+	padding: 150px 50px;
+}
+.direction__content {
+	width: 500px;
+	height: 500px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	/* border: 1px solid #000; */
+	padding: 40px 30px;
+	/* margin: 200px 0; */
+	box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.4);
+}
+.direction__content h3{
+	text-transform: uppercase;
+	font-size: 20px;
+	font-weight: 600;
+	color: #38D487;
+}
+.direction__content h2{
+	color: #1e90ff;
+	font-family: 'Lato', sans-serif;
+	font-size: 35px;
+	font-weight: 800;
+}
+.direction__content p{
+	font-size: 18px;
+	color: rgba(0, 0, 0, 0.8);
+
+}
+.direction__box {
+	display: flex;
+	flex-direction: column;
+}
+.percent__progress {
+	width: 400px;height: 10px;
+	background-color: rosybrown;
+	margin: 10px;
+	border-radius: 50px;
+}
+progress::-webkit-progress-bar {
+	background-color: #FAECF2;
+	border-radius: 10px;
+}
+progress::-webkit-progress-value {
+	background: linear-gradient(to right,#1e90ff 20%, #38D487);
+	border-radius: 10px;
 }
