--- a/style/style.css
+++ b/style/style.css
@@ -58,6 +58,10 @@ body {
 	position: absolute;
 	margin: 1px auto;
 	top: -5px;
+	transition: .3s;
+}
+.header__logo:hover a {
+	color: #fff;
 }
 .header__logo a span {
 	font-family: "new_channel_font_black", sans-serif;
@@ -147,8 +151,17 @@ body {
 }
 .direction {
 	display: flex;
+	flex-direction: column;
 	width: 100%;
 	background-color: #F3F6FD;
+	text-align: center;
+}
+.direction .heading {
+	margin: 15px 0;
+}
+.direction__content {
+	display: flex;
+	text-align: left;
 }
 .direction img {
 	width: 50%;
@@ -172,7 +185,8 @@ body {
 }
 .heading{
 	color: #1e90ff;
-	font-family: 'Lato', sans-serif;
+	/* font-family: 'Lato', sans-serif; */
+	font-family: 'Playfair Display', sans-serif;
 	font-size: 35px;
 	font-weight: 800;
 	margin: 30px 0 20px 0;
@@ -181,6 +195,9 @@ body {
 	font-size: 18px;
 	color: rgba(0, 0, 0, 0.8);
 	margin-bottom: 20px;
+}
+.direction .heading {
+	font-size: 'Lato', sans-serif;
 }
 .direction__holder {
 	display: flex;
@@ -268,37 +285,21 @@ progress::-webkit-progress-value {
 	margin-top: 0px;
 }
 .projects__slide {
-	padding: 0 50px 100px;
-}
-/* .owl-carousel .owl-dots.disabled {
-	display: block;
-} */
-.projects__item {
-	display: flex;
-	flex-direction: column;
+	padding: 30px 50px 100px;
 	justify-content: center;
-	background-size: cover;
-	background-position: center; */
+}
+.projects__item {
 	overflow: hidden;
-	position: relative;
+	/* position: relative; */
 }
 .projects__item a {
-	width: auto;
-	height: 300px;
 }
 .projects__image {
-	height: 100%;
-	width: 100%;
-}
-.owl-carousel .owl-item img {
-	height: 100%;
-	object-fit: fill;
-
 }
 .projects__desc {
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.7);
+	background-color: rgba(255, 255, 255, 0.6);
 	position: absolute;
 	top: 300px;
 	transition: .5s;
@@ -309,13 +310,16 @@ progress::-webkit-progress-value {
 }
 .projects__desc h4 {
 	margin-bottom: 50px;
-	color: rgba(255, 255, 255, 0.8);
+	color: rgba(0, 0, 0, 1);
 }
 .projects__desc p {
-	color: rgba(255, 255, 255, 0.8);
+	color: rgba(0, 0, 0, 1);
 }
 .projects__item:hover .projects__desc {
 	top: 0;
+}
+.owl-theme .owl-nav.disabled+.owl-dots {
+	margin-top: 40px;
 }
 .process {
 	text-align: center;
